[project]
name = "hexstrike-ai"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.0",
    "angr>=9.2.0",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.12.0",
    "fastmcp>=2.13.0",
    "flask>=2.3.0",
    "mitmproxy>=9.0.0",
    "psutil>=5.9.0",
    "pwntools>=4.10.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]
